--- a/webmaerd/templates/base/header.html
+++ b/webmaerd/templates/base/header.html
@@ -1,3 +1,5 @@
+{% load i18n %}
+{% get_current_language as LANGUAGE_CODE %}
 {% load staticfiles %}
 
 <header id="header" class="header default">
@@ -9,7 +11,7 @@
                         <ul>
                             <li><i class="fa fa-envelope-o theme-color"></i> contact@webmaerd.com</li>
                             <!--<li><i class="fa fa-phone"></i> -->
-                                <!--<a href="tel:+0000000000"><span>+(000) 000-0000 </span></a>-->
+                            <!--<a href="tel:+0000000000"><span>+(000) 000-0000 </span></a>-->
                             <!--</li>-->
                         </ul>
                     </div>
@@ -51,6 +53,50 @@
                                     <li><a href="/portfolio">Portfolio</a></li>
                                     <li><a href="/faq">FAQ</a></li>
                                     <li><a href="/contact">Contact Us</a></li>
+                                    <li>
+                                        {% get_current_language as LANGUAGE_CODE %}
+                                        {% get_available_languages as LANGUAGES %}
+                                        {% get_language_info_list for LANGUAGES as languages %}
+                                        <input name="next" type="hidden" value="/"/>
+                                        {% if LANGUAGE_CODE == 'en' %}
+                                        <input name="language" type="hidden" value="en"/>
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                                           aria-expanded="false"><img src="/static/images/flags/en-flag.png"
+                                                                      alt="ENG">&nbsp; English</a>
+                                        {% endif %}
+                                        {% if LANGUAGE_CODE == 'ru' %}
+                                        <input name="language" type="hidden" value="ru"/>
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                                           aria-expanded="false"><img src="/static/images/flags/ru-flag.png"
+                                                                      alt="RU">&nbsp; Русский</a>
+                                        {% endif %}
+                                        {% if LANGUAGE_CODE == 'it' %}
+                                        <input name="language" type="hidden" value="it"/>
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                                           aria-expanded="false"><img src="/static/images/flags/it-flag.png"
+                                                                      alt="IT">&nbsp; Italiano</a>
+                                        {% endif %}
+                                        <ul class="drop-down-multilevel" role="menu"
+                                            aria-labelledby="language-switch-dropdown">
+                                            <li>
+                                                {% get_current_language as LANGUAGE_CODE %}
+                                                {% get_available_languages as LANGUAGES %}
+                                                {% get_language_info_list for LANGUAGES as languages %}
+                                                {% for language in languages %}
+                                                {% if language.code != LANGUAGE_CODE %}
+                                                {% with 'images/flags/'|add:language.code|add:'-flag.png' as image_static %}
+                                                <a href="/{{ language.code }}{{ request.get_full_path|slice:'3:' }}"
+                                                   lang="{{ language.code }}" style="padding: 10px 10px;">
+                                                    <img src="{% static image_static %}" style="vertical-align:sub"
+                                                         alt="">
+                                                    {{ language.name_local }}
+                                                </a>
+                                                {% endwith %}
+                                                {% endif %}
+                                                {% endfor %}
+                                            </li>
+                                        </ul>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
