google maps update

--- a/webmaerd/templates/contact.html
+++ b/webmaerd/templates/contact.html
@@ -44,17 +44,17 @@ page-title -->
                                     </div>
                                     <div class="media-body">
                                         <h5 class="text-white">ADDRESS</h5>
-                                        <p class="mb-0 text-white">17504 Carlton Cuevas Rd, Gulfport, MS, 39503</p>
+                                        <p class="mb-0 text-white">Nowoursynowska street 161, 00-001, Warsaw, Poland</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-4">
                                 <div class="media h-100 p-4">
                                     <div class="feature-icon media-icon mr-4">
-                                        <span class="ti-mobile theme-color"></span>
+                                        <span class="ti-skype  theme-color"></span>
                                     </div>
                                     <div class="media-body">
-                                        <h5 class="text-white">PHONE</h5>
+                                        <h5 class="text-white">SKYPE</h5>
                                         <p class="mb-0 text-white">+(704) 279-1249</p>
                                     </div>
                                 </div>
@@ -130,44 +130,6 @@ page-title -->
 
 <!--=================================
  contact -->
-
-
-<!--=================================
-feature- -->
-
-<section class="page-section-pb contact-5">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-4 col-md-4 sm-mb-30">
-                <div class="feature-text border h-100">
-                    <div class="feature-info">
-                        <h5 class="text-back">New york</h5>
-                        <p> 17504 Carlton Cuevas Rd, MS 39503</p>
-                        <p class="mt-15">+(000) 000-0000</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-4 sm-mb-30">
-                <div class="feature-text border h-100">
-                    <div class="feature-info">
-                        <h5 class="text-back">London</h5>
-                        <p>1234 North Avenue Luke, IN 360001</p>
-                        <p class="mt-15">+(000) 000-0000</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-4 sm-mb-30">
-                <div class="feature-text border h-100">
-                    <div class="feature-info">
-                        <h5 class="text-back">Paris</h5>
-                        <p>44 Shirley Ave. West Chicago, IL 60185</p>
-                        <p class="mt-15">+(000) 000-0000</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
 
 <!--=================================
 action box- -->
