--- a/webmaerd/templates/base/header.html
+++ b/webmaerd/templates/base/header.html
@@ -76,25 +76,23 @@
                                            aria-expanded="false"><img src="/static/images/flags/it-flag.png"
                                                                       alt="IT">&nbsp; Italiano</a>
                                         {% endif %}
-                                        <ul class="drop-down-multilevel" role="menu"
-                                            aria-labelledby="language-switch-dropdown">
-                                            <li>
-                                                {% get_current_language as LANGUAGE_CODE %}
-                                                {% get_available_languages as LANGUAGES %}
-                                                {% get_language_info_list for LANGUAGES as languages %}
-                                                {% for language in languages %}
-                                                {% if language.code != LANGUAGE_CODE %}
-                                                {% with 'images/flags/'|add:language.code|add:'-flag.png' as image_static %}
-                                                <a href="/{{ language.code }}{{ request.get_full_path|slice:'3:' }}"
-                                                   lang="{{ language.code }}" style="padding: 10px 10px;">
-                                                    <img src="{% static image_static %}" style="vertical-align:sub"
-                                                         alt="">
-                                                    {{ language.name_local }}
-                                                </a>
-                                                {% endwith %}
-                                                {% endif %}
-                                                {% endfor %}
-                                            </li>
+                                        <ul class="drop-down-multilevel" id="language-switcher">
+                                            {% get_current_language as LANGUAGE_CODE %}
+                                            {% get_available_languages as LANGUAGES %}
+                                            {% get_language_info_list for LANGUAGES as languages %}
+                                            {% for language in languages %}
+                                            {% if language.code != LANGUAGE_CODE %}
+                                            {% with 'images/flags/'|add:language.code|add:'-flag.png' as image_static %}
+                                                <li>
+                                                    <a href="/{{ language.code }}{{ request.get_full_path|slice:'3:' }}"
+                                                       lang="{{ language.code }}" style="padding: 10px 10px;">
+                                                        <img src="{% static image_static %}" style="vertical-align:sub"
+                                                             alt="">&nbsp;&nbsp;{{ language.name_local }}
+                                                    </a>
+                                                </li>
+                                            {% endwith %}
+                                            {% endif %}
+                                            {% endfor %}
                                         </ul>
                                     </li>
                                 </ul>
