Correction of English content

--- a/webmaerd/templates/faq.html
+++ b/webmaerd/templates/faq.html
@@ -35,7 +35,7 @@ page-title -->
                 <div class="section-title text-center">
                     <h6>Have a question?</h6>
                     <h2 class="title-effect">Frequently Asked Questions</h2>
-                    <p>Answers to frequently asked questions about cooperation with us.</p>
+                    <p>Most frequently asked questions regarding cooperation.</p>
                 </div>
             </div>
         </div>
