--- a/webmaerd/templates/index.html
+++ b/webmaerd/templates/index.html
@@ -11,11 +11,11 @@
                 <div class="col-lg-12 col-md-12">
                     <div class="slider-content text-center">
                         <h2 class="text-white">Web Development:
-                            <span class="typer" data-delay="100" data-words="Modern,Inexpensive,Fast"
+                            <span class="typer" data-delay="100" data-words="Modern,Inexpensively,Fast"
                                   data-colors="#84ba3f,#84ba3f,#84ba3f"></span>
                             <span class="cursor" data-cursorDisplay="|" data-owner="some-id"></span>
                         </h2>
-                        <p class="text-white mt-40">Creation of professional sites at affordable prices in a short
+                        <p class="text-white mt-40">Professional websites creation at a reasonable price in a short
                             time.</p>
                     </div>
                 </div>
@@ -33,11 +33,11 @@ custom-content -->
         <div class="row justify-content-center text-center">
             <div class="col-lg-10 col-md-10 ">
                 <strong>Where modern technologies meet modern business</strong>
-                <h2 class="mt-20">Want a new site or update an existing one?</h2>
+                <h2 class="mt-20">Want to get a new website or update existing?</h2>
                 <p class="normal mt-30">
-                    For any modern firm it will be useful to have your own website. The website of the company is able
-                    to raise the recognition of your brand, attract new customers and increase sales. We are engaged in
-                    the creation of modern and professional sites for small and medium-sized businesses.
+                    For any modern compnies it is very useful to have their own website. High quality site can increase
+                    your brand recognition, attract new customers and increase sales level. We deal with modern and
+                    professional sites' development for small and medium business.
                 </p>
                 <div class="action-box-button mt-40">
                     <a class="button icon xs-mb-10" href="/contact">
@@ -68,8 +68,8 @@ custom-content -->
                 <div class="section-title">
                     <h6>Our offer</h6>
                     <h2 class="title-effect">Services</h2>
-                    <p>We have an individual approach to each client. Every order we perform scrupulously and
-                        responsibly. We take into account the wishes of our customers and make quality websites.</p>
+                    <p>We have individual approach to ever customer. We carry out each order scrupulously and with
+                        responsibility. We take into account our customers' wishes and create only quality websites.</p>
                 </div>
             </div>
         </div>
@@ -115,12 +115,12 @@ custom-content -->
                 <div class="portfolio-title section-title mt-md-5">
                     <h6>Creative and modern</h6>
                     <h2 class="title-effect">Our Latest Works</h2>
-                    <p class="mb-20">Our portfolio presents our latest work, which you can see and evaluate. We approach
-                        each project carefully and diligently.</p>
-                    <span>We create websites for small and medium business owners. The theme of the sites is very
-                        different: restaurants, hotels, car rental, repairs and maintenance, beauty salons,
-                        hairdressers, educational institutions and so on. We create websites for every field
-                        of activity.</span>
+                    <p class="mb-20">In the portfolio you can find the latest projects which you can look at and
+                        evaluate. We carry out each project carefully and diligently.</p>
+                    <span> We create websites for small and medium business owners. Subjects of these webpages are very
+                        different: restaurants, hotels, car rentals, repair and maintenance, beauty salons, barbershops,
+                        educational establishments, etc. We create websites for any sphere.
+                    </span>
                     <a class="button mt-30" href="/portfolio"> See all projects </a>
                 </div>
                 <div>
@@ -157,24 +157,24 @@ most Awesome- -->
                 <div class="section-title">
                     <h6 class="text-white">What we do?</h6>
                     <h2 class="text-white title-effect">We help your business</h2>
-                    <p class="text-white">The site of your company is an excellent tool for increasing the recognition
-                        of your brand and also for increasing your sales.</p>
+                    <p class="text-white">Your company website is an excellent tool for your brand recognition and sales
+                        level increasing. </p>
                 </div>
-                <p class="text-white">The site is the face of your company on the Internet. That's why every modern
-                    company should have its own website. And this site should have a beautiful and modern design, be
-                    informative and represent your company in the best possible light.</p>
+                <p class="text-white">The website is your company's image in Internet. That's why every modern company
+                    should have its own website. And this website should have beautiful and modern design, be
+                    informative and represent your company in the best way.</p>
                 <h6 class="text-white">What do we offer?</h6>
                 <div class="row mt-30">
                     <div class="col-sm-6">
                         <ul class="list list-unstyled list-hand">
-                            <li class="text-white"> High-quality web development</li>
+                            <li class="text-white"> High quality Web Development</li>
                             <li class="text-white"> Modern design</li>
                         </ul>
                     </div>
                     <div class="col-sm-6">
                         <ul class="list list-unstyled list-hand">
-                            <li class="text-white"> Support with domain</li>
-                            <li class="text-white"> Support with hosting</li>
+                            <li class="text-white"> Domains' support</li>
+                            <li class="text-white"> Hosting support</li>
                         </ul>
                     </div>
                 </div>
@@ -192,9 +192,9 @@ action box- -->
         <div class="row">
             <div class="col-lg-12 col-md-12">
                 <div class="action-box-text">
-                    <h3><strong> Webmaerd: </strong> Modern web development and web design</h3>
-                    <p>You can order website creation, web design, purchase and domain settings, help in placing the
-                        site on the hosting, assistance in setting up mail for your domain.</p>
+                    <h3><strong> Webmaerd: </strong> Modern Web Development and web design</h3>
+                    <p>You can order website creation, web design, domain purchase and configuration, assistance with
+                        website placement on hosting, assistance with mail configuration for your domain.</p>
                 </div>
                 <div class="action-box-button">
                     <a class="button button-border white" href="/contact">
